THEME_NAME=BlackMATE

themedir = $(datadir)/themes/$(THEME_NAME)/cinnamon

theme_DATA = \
	add-workspace-hover.png \
	add-workspace.png \
	calendar-arrow-left.svg \
	calendar-arrow-right.svg \
	checkbox-focused.svg \
	checkbox-off-focused.svg \
	checkbox-off.svg \
	checkbox.svg \
	cinnamon.css \
	close.svg \
	corner-ripple.png \
	overview-hover.png \
	overview.png \
	panel-button-highlight-narrow.svg \
	radiobutton-off.svg \
	radiobutton.svg \
	thumbnail.png \
	toggle-off-intl.png \
	toggle-off-us.png \
	toggle-on-intl.png \
	toggle-on-us.png \
	trash-icon.png

EXTRA_DIST = $(theme_DATA)
