THEME_NAME=BlackMATE

themedir = $(datadir)/themes/$(THEME_NAME)/gnome-shell

theme_DATA = \
	calendar-arrow-left.svg \
	calendar-arrow-right.svg \
	checkbox-focused.svg \
	checkbox-off-focused.svg \
	checkbox-off.svg \
	checkbox.svg \
	close.svg \
	close-window.svg \
	corner-ripple-ltr.png \
	corner-ripple.png \
	corner-ripple-rtl.png \
	dash-placeholder.svg \
	dialog-error.svg \
	filter-hover-rtl.svg \
	filter-hover.svg \
	gnome-shell.css \
	GnomishDark-preview.png \
	logged-in-indicator.svg \
	panel-button-highlight-narrow.svg \
	process-working.png \
	process-working.svg \
	running-indicator.svg \
	summary-counter.svg \
	theme.json \
	toggle-off-intl.png \
	toggle-off-us.png \
	toggle-on-intl.png \
	toggle-on-us.png \
	ws-switch-arrow-down.svg \
	ws-switch-arrow-up.svg

EXTRA_DIST = $(theme_DATA)

SUBDIRS = dashtodock

DIST_SUBDIRS = dashtodock
