THEME_NAME=BlackMATE

themedir = $(datadir)/themes/$(THEME_NAME)/gtk-3.0

theme_DATA = \
	gnome-applications.css \
	gtk.css \
	gtk-dark.css \
	gtk-main.css \
	gtk-main-dark.css \
	gtk-widgets.css \
	gtk-widgets-assets-dark.css \
	mate-applications.css \
	other-applications.css \
	settings.ini \
	unity.css \
	window-controls.css

EXTRA_DIST = $(theme_DATA)

SUBDIRS = assets \
	window-controls
