themedir = $(datadir)/themes/Blue-Submarine/gtk-3.0

theme_DATA = \
	gnome-mdi.css \
	gtk.css \
	gtk-widgets-assets.css \
	gtk-widgets.css \
	mate-applications.css \
	menu.css \
	scrollbar.css \
	settings.ini \
	sidebar.css \
	tabs.css

EXTRA_DIST = $(theme_DATA)

SUBDIRS = assets

DIST_SUBDIRS = assets
