
themedir = $(datadir)/themes/Blue-Submarine/metacity-1

theme_DATA = \
	icon_close.png \
	icon_close_u.png \
	icon_maximize.png \
	icon_maximize_u.png \
	icon_minimize.png \
	icon_minimize_u.png \
	icon_restore.png \
	icon_restore_u.png \
	metacity-theme-1.xml \
	stripes.png

EXTRA_DIST = $(theme_DATA)
