themedir = $(datadir)/themes/BlueMenta/cinnamon

theme_DATA = \
	add-workspace.png \
	calendar-arrow-left.svg \
	calendar-arrow-right.svg \
	calendar-today.svg \
	cinnamon.css \
	close.svg \
	close-window.svg \
	corner-ripple-ltr.png \
	corner-ripple-rtl.png \
	dash-placeholder.svg \
	filter-selected-ltr.svg \
	filter-selected-rtl.svg \
	gdm.css \
	menu.png \
	overview1.png \
	overview2.png \
	panel-button-border.svg \
	panel-button-highlight-narrow.svg \
	panel-button-highlight-wide.svg \
	player-paused.svg \
	player-playing.svg \
	player-stopped.svg \
	process-working.svg \
	running-indicator.svg \
	scroll-hhandle.svg \
	scroll-vhandle.svg \
	source-button-border.svg \
	switch-off.png \
	switch-on.png \
	thumbnail.png \
	ws-switch-arrow-down.svg \
	ws-switch-arrow-up.svg

EXTRA_DIST = $(theme_DATA)
